src/objects/Orden_de_compra_plan_de_pago__c.object
<CustomObject>
    <fields>
        <fullName>Fecha_estimada_de_pago__c</fullName>
        <label>Fecha estimada de pago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orden_de_compra__c</fullName>
        <label>Orden de compra</label>
        <referenceTo>Orden_de_compra__c</referenceTo>
        <relationshipLabel>Ordenes de compra plan de pago</relationshipLabel>
        <relationshipName>Ordenes_de_compra_plan_de_pago</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Orden de compra plan de pago</label>
    <nameField>
        <displayFormat>OCP-{00000000}</displayFormat>
        <label>Nombre de Orden de compra plan de pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de compra plan de pago</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>